MFG Ready Version/force-app/main/default/objects/mfg_Warehouse__c/mfg_Warehouse__c.object-meta.xml
<CustomObject>
    <label>Warehouse</label>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>