MFG Ready Version/force-app/main/default/objects/mfg_Warehouse__c/fields/mfg_Address__c.field-meta.xml
<CustomField>
    <fullName>mfg_Address__c</fullName>
    <label>Address</label>
    <type>Address</type>
</CustomField>