MFG Ready Version/force-app/main/default/objects/mfg_Warehouse__c/fields/mfg_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>mfg_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>