MFG Ready Version/force-app/main/default/objects/mfg_Warehouse__c/fields/mfg_Manager__c.field-meta.xml
<CustomField>
    <fullName>mfg_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Warehouses</relationshipName>
    <type>Lookup</type>
</CustomField>