MFG Ready Version/force-app/main/default/objects/mfg_Warehouse__c/fields/mfg_Warehouse_Linking_Code__c.field-meta.xml
<CustomField>
    <fullName>mfg_Warehouse_Linking_Code__c</fullName>
    <description>The warehouse linking code follows the format CCRMNNNN, where CC is the city code (e.g., CH for Chennai, BL for Bangalore), R denotes the region (S–South, N–North, W–West, E–East, C–Central), M is a constant indicating a manufacturing link, and NNNN is a 4-digit sequence number (0001–0015). Both the production and storage warehouses in the same city share the same linking code.</description>
    <inlineHelpText>The warehouse linking code follows the format CCRMNNNN, where CC is the city code (e.g., CH for Chennai, BL for Bangalore), R denotes the region (S–South, N–North, W–West, E–East, C–Central), M is a constant indicating a manufacturing link, and NNNN is a 4-digit sequence number (0001–0015). Both the production and storage warehouses in the same city share the same linking code.</inlineHelpText>
    <label>Warehouse Linking Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>