MFG Ready Version/force-app/main/default/objects/mfg_Warehouse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mfg_Type__c</columns>
    <columns>mfg_Manager__c</columns>
    <columns>mfg_Is_Active__c</columns>
    <columns>mfg_Capacity__c</columns>
    <columns>mfg_Is_Climate_Controlled__c</columns>
    <columns>mfg_Address__StateCode__s</columns>
    <columns>mfg_Address__PostalCode__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>